# pdm-cffi-repro

./: README.md  pdm_build.py  pyproject.toml
examples/: main.py
src/myuuid_cffi/: __init__.py  functions.py
src/myuuid_cffi/builder/: build_myuuid.py
